--- a/HMS-Team3-SwiftApp/Storybords/PatientStoryboards/PatientProfileMedicalHistory.storyboard
+++ b/HMS-Team3-SwiftApp/Storybords/PatientStoryboards/PatientProfileMedicalHistory.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="GCh-BU-gwA">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="GCh-BU-gwA">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
-        <capability name="Named colors" minToolsVersion="9.0"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
@@ -20,42 +20,42 @@
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="VqY-Qx-aTl">
                                 <rect key="frame" x="20" y="129" width="353" height="689"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="s9C-if-dhn">
-                                    <size key="itemSize" width="361" height="128"/>
+                                    <size key="itemSize" width="346" height="128"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="historycell" id="NOB-1b-05E" customClass="MedicalHistoryCollectionViewCell" customModule="HMS_Team3_SwiftApp" customModuleProvider="target">
-                                        <rect key="frame" x="-4" y="0.0" width="361" height="128"/>
+                                        <rect key="frame" x="3.6666666666666665" y="0.0" width="346" height="128"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="ubz-y4-jub">
-                                            <rect key="frame" x="0.0" y="0.0" width="361" height="128"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="346" height="128"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gnc-iY-Rhd">
-                                                    <rect key="frame" x="15" y="21" width="83" height="87"/>
-                                                    <color key="backgroundColor" red="0.75686274509999996" green="0.95294117649999999" blue="0.93725490199999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <rect key="frame" x="15" y="21" width="68" height="87"/>
+                                                    <color key="backgroundColor" red="0.79607844350000001" green="0.94901961089999998" blue="0.93333339689999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cancer" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sRS-xC-eAC">
-                                                    <rect key="frame" x="111" y="21" width="231" height="36"/>
+                                                    <rect key="frame" x="111" y="21" width="216" height="36"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Dr. Bindra" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ys8-TE-qca">
-                                                    <rect key="frame" x="112" y="57" width="230" height="21"/>
+                                                    <rect key="frame" x="112" y="57" width="215" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="E3v-zo-NfH">
-                                                    <rect key="frame" x="216" y="83" width="75" height="35"/>
+                                                    <rect key="frame" x="201" y="83" width="75" height="35"/>
                                                     <state key="normal" title="Button"/>
                                                     <buttonConfiguration key="configuration" style="filled" title="Button" cornerStyle="capsule">
                                                         <color key="baseForegroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.69803921570000005" colorSpace="custom" customColorSpace="displayP3"/>
@@ -66,7 +66,7 @@
                                                     </connections>
                                                 </button>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xgt-j9-et2">
-                                                    <rect key="frame" x="307" y="83" width="35" height="35"/>
+                                                    <rect key="frame" x="303" y="83" width="31" height="35"/>
                                                     <state key="normal" title="Button"/>
                                                     <buttonConfiguration key="configuration" style="filled" image="arrow.down" catalog="system" cornerStyle="capsule">
                                                         <color key="baseForegroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.69803921570000005" colorSpace="custom" customColorSpace="displayP3"/>
@@ -77,16 +77,16 @@
                                                     </connections>
                                                 </button>
                                             </subviews>
-                                            <color key="backgroundColor" name="stats1"/>
+                                            <color key="backgroundColor" red="0.65882354970000001" green="0.82352948189999997" blue="0.8078432083" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                             <constraints>
                                                 <constraint firstAttribute="bottom" secondItem="Gnc-iY-Rhd" secondAttribute="bottom" constant="20" id="21C-m6-HgA"/>
                                                 <constraint firstItem="xgt-j9-et2" firstAttribute="top" secondItem="ubz-y4-jub" secondAttribute="top" constant="83" id="7NQ-no-mpQ"/>
-                                                <constraint firstAttribute="trailing" secondItem="xgt-j9-et2" secondAttribute="trailing" constant="19" id="9W5-Mw-xm5"/>
+                                                <constraint firstAttribute="trailing" secondItem="xgt-j9-et2" secondAttribute="trailing" constant="12" id="9W5-Mw-xm5"/>
                                                 <constraint firstItem="E3v-zo-NfH" firstAttribute="top" secondItem="ubz-y4-jub" secondAttribute="top" constant="83" id="CWe-u5-tHx"/>
                                                 <constraint firstAttribute="bottom" secondItem="Ys8-TE-qca" secondAttribute="bottom" constant="50" id="Khx-Xb-YjV"/>
-                                                <constraint firstItem="E3v-zo-NfH" firstAttribute="leading" secondItem="ubz-y4-jub" secondAttribute="leading" constant="216" id="MLn-YG-U0X"/>
+                                                <constraint firstItem="E3v-zo-NfH" firstAttribute="leading" secondItem="ubz-y4-jub" secondAttribute="leading" constant="201" id="MLn-YG-U0X"/>
                                                 <constraint firstItem="Gnc-iY-Rhd" firstAttribute="top" secondItem="ubz-y4-jub" secondAttribute="top" constant="21" id="OQW-a1-E6W"/>
-                                                <constraint firstItem="xgt-j9-et2" firstAttribute="leading" secondItem="ubz-y4-jub" secondAttribute="leading" constant="307" id="Ods-xD-h1E"/>
+                                                <constraint firstItem="xgt-j9-et2" firstAttribute="leading" secondItem="ubz-y4-jub" secondAttribute="leading" constant="303" id="Ods-xD-h1E"/>
                                                 <constraint firstItem="sRS-xC-eAC" firstAttribute="leading" secondItem="ubz-y4-jub" secondAttribute="leading" constant="111" id="QTp-Eo-ppO"/>
                                                 <constraint firstItem="Ys8-TE-qca" firstAttribute="top" secondItem="ubz-y4-jub" secondAttribute="top" constant="57" id="Rrz-zX-gOP"/>
                                                 <constraint firstItem="Ys8-TE-qca" firstAttribute="leading" secondItem="ubz-y4-jub" secondAttribute="leading" constant="112" id="Ufs-zU-huD"/>
@@ -101,7 +101,7 @@
                                                 <constraint firstAttribute="trailing" secondItem="E3v-zo-NfH" secondAttribute="trailing" constant="70" id="yhZ-AU-J7i"/>
                                             </constraints>
                                         </collectionViewCellContentView>
-                                        <size key="customSize" width="361" height="128"/>
+                                        <size key="customSize" width="346" height="128"/>
                                         <connections>
                                             <outlet property="Disease" destination="sRS-xC-eAC" id="ZhX-dH-KFa"/>
                                             <outlet property="doctorName" destination="Ys8-TE-qca" id="jyw-BE-Rh0"/>
@@ -132,12 +132,63 @@
             </objects>
             <point key="canvasLocation" x="2890.8396946564885" y="298.59154929577466"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="fvj-57-Obk">
+            <objects>
+                <viewController storyboardIdentifier="addHistory" id="QL2-Di-IA4" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="MtL-jG-ccp">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Medical Emergency" clearsOnBeginEditing="YES" adjustsFontForContentSizeCategory="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="J4v-zv-MPX">
+                                <rect key="frame" x="59" y="267" width="274" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Doctor" clearsOnBeginEditing="YES" adjustsFontForContentSizeCategory="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="p3E-Wa-quP">
+                                <rect key="frame" x="59" y="347" width="274" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Date" clearsOnBeginEditing="YES" adjustsFontForContentSizeCategory="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="a9K-NL-ViP">
+                                <rect key="frame" x="59" y="424" width="274" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <textInputTraits key="textInputTraits" textContentType="date-time"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J7h-Uu-0hW">
+                                <rect key="frame" x="153" y="616" width="87" height="35"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="Save" cornerStyle="capsule">
+                                    <color key="baseBackgroundColor" red="0.270588249" green="0.60784316059999999" blue="0.55686277149999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                </buttonConfiguration>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xBc-nL-mbs">
+                                <rect key="frame" x="112" y="519" width="168" height="35"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" image="square.and.arrow.up" catalog="system" imagePlacement="trailing" title="Upload Report" imagePadding="9" cornerStyle="capsule">
+                                    <color key="baseBackgroundColor" red="0.270588249" green="0.60784316059999999" blue="0.55686277149999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                </buttonConfiguration>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="8gx-Kn-XVQ"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="q6n-4e-ggU"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Cct-cK-dd7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3707.6335877862593" y="298.59154929577466"/>
+        </scene>
     </scenes>
     <resources>
         <image name="arrow.down" catalog="system" width="118" height="128"/>
-        <namedColor name="stats1">
-            <color red="0.75294117647058822" green="0.8784313725490196" blue="0.70980392156862748" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
+        <image name="square.and.arrow.up" catalog="system" width="115" height="128"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
